updated css of dashboard.html and upload.html (added background color and correct alignment)

--- a/monitoring/static/monitoring/css/analysis_dashboard.css
+++ b/monitoring/static/monitoring/css/analysis_dashboard.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f4f6f9;
+    background: linear-gradient(to right, #ffecd2, #fcb69f);
     margin: 30px;
     color: #2c3e50;
 }
