--- a/monitoring/static/monitoring/css/dashboard.css
+++ b/monitoring/static/monitoring/css/dashboard.css
@@ -5,25 +5,33 @@
             box-sizing: border-box;
         }
 
+        h1 {
+           font-size: 2.8em;
+           color: #2d3436;
+           margin-bottom: 40px;
+           margin-top: 0; /* Remove negative margin */
+        }
+
+        .button-group {
+           display: flex;
+           justify-content: center;
+           gap: 20px; /* space between buttons */
+           flex-wrap: wrap;
+        }
+
+        .dashboard-container {
+            text-align: center;
+            margin-bottom: -250px;
+        }          
+
         body {
             font-family: 'Poppins', sans-serif;
             background: linear-gradient(to right, #74ebd5, #9face6);
-            height: 100vh;
+            height: 80vh;
             display: flex;
             margin: 40px;
             justify-content: center;
             align-items: center;
-        }
-
-        .dashboard-container {
-            background: #ffffff;
-            padding: 50px 60px;
-            border-radius: 16px;
-            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
-            text-align: center;
-            width: 90%;
-            max-width: 500px;
-            animation: fadeIn 1s ease;
         }
 
         h1 {
